--- a/TODO_12/app/src/main/AndroidManifest.xml
+++ b/TODO_12/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TODO_12">
-        <activity android:name=".MainActivity"
+        <activity android:name=".OrderingActivity"></activity>
+        <activity
+            android:name=".MainActivity"
             android:label="Odering">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
